Banner section mob

--- a/index.css
+++ b/index.css
@@ -69,4 +69,12 @@
   .header-shadow {
     box-shadow: 0 15px 40px -20px rgba(40, 44, 63, 0.15);
   }
+
+  .bg-mobile {
+    background: linear-gradient(
+      rgb(255, 255, 255) -6.71%,
+      rgb(235, 235, 242) 56.19%,
+      rgb(223, 223, 231) 106.56%
+    );
+  }
 }
